--- a/2023_Graduate_Project/Info.plist
+++ b/2023_Graduate_Project/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>위치좀 쓸게 ㅋ</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>니 위치좀 쓸게</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>사진 선택을 위해 갤러리 접근을 허용하겠습니까?</string>
 	<key>UILaunchStoryboardName</key>
